--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li>Home</li>
-                <li>About</li>
+                <li><a href="./about.html">About</a></li>
                 <li>Contact</li>
             </ul>
         </nav>
