--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
         <nav>
             <ul>
-                <li>Home</li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
-                <li>Contact</li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
 
@@ -31,6 +31,7 @@
         </div>
     </header>
 
+    <h1 style="margin: 20px;">Home</h1>
 
     <script src="./script.js"></script>
 </body>
