--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
@@ -31,7 +31,17 @@
         </div>
     </header>
 
-    <h1 style="margin: 20px;">Home</h1>
+
+    <div>
+
+        <h1>Home</h1>
+    </div>
+
+        <h1>Home</h1>
+    </div>
+
+        <h1>Home</h1>
+    </div>
 
     <script src="./script.js"></script>
 </body>
